# lazurich

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  readme.md
lazurich/: __init__.py
lazurich/api/: fabric.py  microsoft.py  mojang.py  piston.py
lazurich/core/: assets.py  exceptions.py  instances.py  jars.py  launcher.py  natives.py  network.py  paths.py  store.py  utils.py
lazurich/core/models/: config.py  general.py
lazurich/core/modloaders/: fabric.py
lazurich/gui/: __main__.py  events.py  loader.py
lazurich/gui/controllers/: instances.py
lazurich/gui/models/: instances.py
lazurich/gui/qml/: LaunchButton.qml  List.qml  Sidebar.qml  SidebarButton.qml  main.qml
lazurich/launcher/: downloader.py  instancemanager.py  launcher.py
scripts/: launch_game_full.py
tests/core/: downloads.py  utils.py
