[project]
name = "lazurich"
version = "0.1.0"
description = "User-focused, feature-rich Minecraft launcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pyside6>=6.10.1",
    "qasync>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
