[project]
name = "lazurich"
version = "0.1.0"
description = "User-focused, feature-rich Minecraft launcher"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "google-re2>=1.1.20251105",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "loguru>=0.7.3",
    "msal>=1.37.0",
    "pyside6>=6.10.1",
    "qasync>=0.28.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
